cfn/aws_430_alb.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >
  Loadbalancer for Web Server, just HTTP, no certificate, for aws_401_ec2_webserver

Parameters:
  ParentVPCStack:
    Description: "Stack name of the parent VPC stack"
    Type: String
    Default: IPv6VPC

  OwnerName:
    Description: An owner name, used in tags
    Type: String
    Default: "wolfgang.unger"

########## outputs for IPv6 address not ready in cloudformation, we have to pass the ip address as variable
  IPv6Address: 
    Description: IPv6 address of the instance
    Type: String
    Default: "2a05:d018:16e5:e200:8910:89f0:9df3:6b98"

Resources:
  SGApiAlb:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access ALB
      VpcId: 
         Fn::ImportValue: !Sub '${ParentVPCStack}-VPC'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: ::/0         

  AlbWebServer:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      Type: application
      Name: AlbWebServer
      Scheme: internet-facing
      IpAddressType: dualstack
      SecurityGroups:
        - !Ref SGApiAlb
      Subnets:
        - !ImportValue
           "Fn::Sub": '${ParentVPCStack}-SubnetAPublic'    
        - !ImportValue
           "Fn::Sub": '${ParentVPCStack}-SubnetBPublic'                    
      Tags:
        - Key: "Name"
          Value: "Alb Web-Server"
        - Key: "Owner"
          Value: !Ref OwnerName

  HttpListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref DefaultTargetGroup
      LoadBalancerArn: !Ref AlbWebServer
      Port: 80
      Protocol: HTTP

  DefaultTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: TargetGroupWebServer
      VpcId: 
        Fn::ImportValue: !Sub '${ParentVPCStack}-VPC'
      HealthCheckIntervalSeconds: 30
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 10
      HealthCheckPort: 80
      HealthCheckPath: "/"
      HealthyThresholdCount: 3
      Matcher:
        HttpCode: "200-499"
      Port: 80
      Protocol: HTTP
      IpAddressType: ipv6
      #TargetType: instance
      ## only ip supported for ipv6  
      TargetType: ip      
      Targets:
        - Id: !Ref IPv6Address
          Port: 80




#############
Outputs:
  WebApiServer:
    Description: "The LB Web Server"
    Value: !GetAtt AlbWebServer.DNSName
    Export:
      Name: "LB-Web-Server"

  AlbApiServerHostedZoneId:
    Description: "The Hosted Zone ID of the LB"
    Value: !GetAtt AlbWebServer.CanonicalHostedZoneID
    Export:
      Name: "LB-Web-Server-HostedZoneId"
